force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/CHANNEL_ORDERS__Partner_Bundle_Product__c.object-meta.xml
<CustomObject>
    <label>Partner Bundle Product</label>
    <nameField>
        <label>Partner Bundle Product  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Bundle Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>