force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__External_Bundle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__External_Bundle_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>External Bundle Identifier</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>