force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Partner_Bundle_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Bundle_Product_ID__c</fullName>
    <label>Partner Bundle Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>