force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Partner_Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Product_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Product Catalog</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Product_Catalog__c</referenceTo>
    <relationshipLabel>Partner Product Catalog Bundle</relationshipLabel>
    <relationshipName>Bundle_Products</relationshipName>
    <type>Lookup</type>
</CustomField>