force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Partner_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Product_ID__c</fullName>
    <formula>CHANNEL_ORDERS__Partner_Product_Catalog__r.CHANNEL_ORDERS__Product_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Product ID</label>
    <type>Text</type>
</CustomField>