force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Prorate_Volume__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Prorate_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate Volume</label>
    <type>Checkbox</type>
</CustomField>