force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Usage_Rate__c</fullName>
    <label>Usage Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>