force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/fields/CHANNEL_ORDERS__Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Usage_Type__c</fullName>
    <label>Usage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>