force-app/main/default/objects/CHANNEL_ORDERS__Partner_Bundle_Product__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Partner_Product_Catalog__c</columns>
    <columns>CHANNEL_ORDERS__Partner_Product_ID__c</columns>
    <columns>CHANNEL_ORDERS__External_Bundle_Identifier__c</columns>
    <columns>CHANNEL_ORDERS__Usage_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>